--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-    href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
-    rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+      rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css">
-    <title>Kỳ Quan Việt Nam </title>
-    <base href="">
+    <title>Kỳ Quan Việt Nam</title>
   </head>
   <body>
     <header class="header" id="home">
@@ -17,7 +16,7 @@
         <div class="nav__bar">
           <!-- Logo -->
           <div class="logo nav__logo">
-            <a href="#">Kỳ Quan Việt Nam </a>
+            <a href="index.html">Kỳ Quan Việt Nam</a>
           </div>
           
           <!-- Liên kết -->
@@ -27,10 +26,7 @@
               <div class="menu">
                 <div class="menu-item" id="menuItem"><a>Địa Điểm</a></div>
                 <div class="dropdown" id="dropdownMenu">
-                  <!-- <a href="HN/HaNoi.html">Hà Nội</a>
-                  <a href="HaiPhong/haiphong.html">Hải Phòng</a>
-                  <a href="QuangNinh/QuangNinh.html">Quảng Ninh</a>
-                  <a href="NinhBinh/NinhBinh.html">Ninh Bình</a> -->
+                  <!-- Các liên kết địa điểm -->
                 </div>
               </div>
             </li>
@@ -50,7 +46,7 @@
         <div class="header__content">
           <h3 class="section__subheader">Cùng khám phá</h3>
           <h1 class="section__header">
-            CÁC KỲ QUAN THIÊN NHIÊN CỦA PHÍA BẮC! !
+            CÁC KỲ QUAN THIÊN NHIÊN CỦA PHÍA BẮC!!
           </h1>
         </div>
       </div>
